--- a/templates/player/create.html.twig
+++ b/templates/player/create.html.twig
@@ -7,39 +7,26 @@
 	<div class="container">
 		<h3>Ajouter nouveau joueur</h3>
 		{{form_start(form)}}
-            <div class="control-group">
-                <div class="controls">
+            <div class="form-row">
+                <div class="form-group col-md-6">
                     {{ form_label(form.name) }}
                     {{ form_widget(form.name, {'attr':{'class':'form-control'}}) }}
                 </div>
-            </div>
-            <div class="control-group">
-                <div class="controls">
-
+                <div class="form-group col-md-6">
                     {{ form_label(form.birthDate) }}
                     {{ form_widget(form.birthDate, {'attr':{'class':'form-control'}}) }}
                 </div>
             </div>
-            <div class="control-group">
-                <div class="controls">
-                    {{ form_label(form.nationality) }}
-                    {{ form_widget(form.nationality, {'attr':{'class':'form-control'}}) }}
-                </div>
+            <div class="form-group">
+                {{ form_label(form.nationality) }}
+                {{ form_widget(form.nationality, {'attr':{'class':'form-control'}}) }}
             </div>
-            <div class="control-group">
-                <div class="controls">
-                    {{ form_label(form.course) }}
-                    {{ form_widget(form.course, {'attr':{'class':'form-control'}}) }}
-                </div>
-            </div>
-            <div class="control-group">
-                <div class="controls">
+            <div class="form-row">
+                <div class="form-group col-md-6">
                     {{ form_label(form.goalsNumber) }}
                     {{ form_widget(form.goalsNumber, {'attr':{'class':'form-control'}}) }}
                 </div>
-            </div>
-            <div class="control-group">
-                <div class="controls">
+                <div class="form-group col-md-6">
                     {{ form_label(form.clubTeam) }}
                     {{ form_widget(form.clubTeam, {'attr':{'class':'form-control'}}) }}
                 </div>
@@ -50,8 +37,12 @@
                     {{ form_widget(form.nationalTeam, {'attr':{'class':'form-control'}}) }}
                 </div>
             </div>
-
-
+            <div class="form-group">
+                <div class="controls">
+                    {{ form_label(form.course) }}
+                    {{ form_widget(form.course, {'attr':{'class':'form-control'}}) }}
+                </div>
+            </div>
             <div class="control-group">
                 <div class="controls">
                     <button class="btn btn-primary">Ajouter</button>
