--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,27 +4,51 @@
         <meta charset="UTF-8">
         <title>{% block title %}Bienvenue{% endblock %}</title>
         {% block stylesheets %}
-            {#{ encore_entry_link_tags('app') }#}
+            {{ encore_entry_link_tags('app') }}
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+            <style>
+                .menu-li {
+                    color: #fff !important;
+                }
+                .align-text {
+                    text-align: center;
+                }
+                #navbarSupportedContent {
+                    text-align: center;
+                }
+            </style>
         {% endblock %}
 
         {% block javascripts %}
-            {#{ encore_entry_script_tags('app') }#}
+            {{ encore_entry_script_tags('app') }}
+            <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         {% endblock %}
     </head>
     <body>
-        <nav>
-            <ul>
-                <li>
-                    <a href="{{ path('list_player') }}">Joueur</a>
-                </li>
-                <li>
-                    <a href="{{ path('list_club') }}">Equipe (club)</a>
-                </li>
-                <li>
-                    <a href="{{ path('list_national_team') }}">Equipe nationale</a>
-                </li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #007bff !important;">
+            <a class="navbar-brand menu-li" href="{{ path('list_player') }}" style="font-size: 25px;">Gestion de joueurs de football</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link menu-li" href="{{ path('list_player') }}">Joueur <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link menu-li" href="{{ path('list_club') }}">Equipe (club)</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link menu-li" href="{{ path('list_national_team') }}">Equipe nationale</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
+        <br>
+        <br>
     </body>
     {% block body %}{% endblock %}
 </html>
