--- a/templates/player/edit.html.twig
+++ b/templates/player/edit.html.twig
@@ -45,7 +45,9 @@
         </div>
         <div class="control-group">
             <div class="controls">
-                <button class="btn btn-primary">Enregister</button>
+                <button class="btn btn-primary">
+                    Enregister <ion-icon name="save-outline"></ion-icon>
+                </button>
             </div>
         </div>
     {{form_end(form)}}
