--- a/templates/club_team/create.html.twig
+++ b/templates/club_team/create.html.twig
@@ -16,7 +16,9 @@
     <br>
     <div class="control-group">
         <div class="controls">
-            <button class="btn btn-primary">Ajouter</button>
+            <button class="btn btn-primary">
+                Ajouter <ion-icon name="save-outline"></ion-icon>
+            </button>
         </div>
     </div>
     {{form_end(form)}}
