--- a/templates/national_team/index.html.twig
+++ b/templates/national_team/index.html.twig
@@ -6,14 +6,19 @@
 
 <div class="container">
     {% for message in app.flashes('success') %}
-        <div class="alert alert-success" role="alert">
-            {{message}}
+       <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <strong>{{ message }}!</strong>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
         </div>
     {% endfor %}
     <h1>Liste des équipes nationales</h1>
     <br>
     <a href="{{ path('national_team_create') }}" style="float: right;">
-        <button type="button" class="btn btn-success">Ajouter nouveau</button>
+        <button type="button" class="btn btn-success">
+            Ajouter nouveau <ion-icon name="save-outline"></ion-icon>
+        </button>
     </a>
     <br>
     <br>
@@ -35,9 +40,13 @@
                         <td>{{ national.name }}</td>
                         <td>
                             <a href="{{ path('national_team_update', {'id': national.id}) }}">
-								<button type="button" class="btn btn-primary">Modifier</button>
+								<button type="button" class="btn btn-primary">
+                                    Modifier <ion-icon name="create-outline"></ion-icon>
+                                </button>
 							</a>
-                            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#ConfirmModalDeleteNationalTeam_{{ national.id }}">Supprimer</button>
+                            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#ConfirmModalDeleteNationalTeam_{{ national.id }}">
+                                Supprimer <ion-icon name="trash"></ion-icon>
+                            </button>
                         </td>
                     </tr>
                     <div class="modal fade" id="ConfirmModalDeleteNationalTeam_{{ national.id }}" tabindex="-1" role="dialog" aria-labelledby="ConfirmModalDeleteNationalTeamLabel" aria-hidden="true">
