--- a/templates/player/create.html.twig
+++ b/templates/player/create.html.twig
@@ -45,7 +45,9 @@
             </div>
             <div class="control-group">
                 <div class="controls">
-                    <button class="btn btn-primary">Ajouter</button>
+                    <button class="btn btn-primary">
+                        Ajouter <ion-icon name="save-outline"></ion-icon>
+                    </button>
                 </div>
             </div>
 		{{form_end(form)}}
