--- a/templates/player/detail.html.twig
+++ b/templates/player/detail.html.twig
@@ -4,19 +4,53 @@
 
 {% block body %}
 
-<div class="example-wrapper">
-    <h1>A propos</h1>
+<div class="container">
+    {% if player %}
+        <h1>Information de {{ player.name }}</h1>
+    {% endif %}
     <div>
         {% if player is defined %}
             <span>
-                <p><strong>Nom: </strong>{{ player.name }}</p>
-                <p><strong>Date de naissance: </strong>{{ player.birthDate|date('d/m/Y') }}</p>
-                <p><strong>Nationalité: </strong>{{ player.nationality }}</p>
-                <p><strong>Nombre de buts: </strong>{{ player.goalsNumber }}</p>
-                <p><strong>Jouer au: </strong>{{ player.clubTeam.name }}</p>
-                <p><strong>Equipe nationale: </strong>{{ player.nationalTeam.name }}</p>
-                <p><strong>Parcours: </strong>{{ player.course }}</p>
+                <strong>Nom</strong>
             </span>
+            <div class="alert alert-info" role="alert">
+                {{ player.name }}
+            </div>
+            <span>
+                <strong>Date de naissance</strong>
+            </span>
+            <div class="alert alert-info" role="alert">
+                {{ player.birthDate|date('d/m/Y') }}
+            </div>
+            <span>
+                <strong>Nationalité</strong>
+            </span>
+            <div class="alert alert-info" role="alert">
+                {{ player.nationality }}
+            </div>
+            <span>
+                <strong>Nombre de buts</strong>
+            </span>
+            <div class="alert alert-info" role="alert">
+                {{ player.goalsNumber }}
+            </div>
+            <span>
+                <strong>Club</strong>
+            </span>
+            <div class="alert alert-info" role="alert">
+                {{ player.clubTeam.name }}
+            </div>
+            <span>
+                <strong>Equipe nationale</strong>
+            </span>
+            <div class="alert alert-info" role="alert">
+                {{ player.nationalTeam.name }}
+            </div>
+            <div class="alert alert-info" role="alert">
+                <h4 class="alert-heading">Parcours</h4>
+                <p>{{ player.course }}</p>
+            </div>
+
         {% endif %}
     </div>
 </div>
