--- a/templates/player/index.html.twig
+++ b/templates/player/index.html.twig
@@ -6,9 +6,12 @@
 
 <div class="container">
     {% for message in app.flashes('success') %}
-        <div class="alert alert-success" role="alert">
-            {{message}}
-        </div>
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <strong>{{ message }}!</strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
     {% endfor %}
     <h1>Liste de joueurs</h1>
     <br>
@@ -29,7 +32,8 @@
         {% endif %}
     </select>
     <a href="{{ path('player_create') }}" style="float: right;">
-        <button type="button" class="btn btn-success">Ajouter nouveau</button>
+        <button type="button" class="btn btn-success">
+            Ajouter nouveau <ion-icon name="save-outline"></ion-icon></button>
     </a>
     </br>
     </br>
@@ -55,11 +59,17 @@
                         <td>{{ player.nationalTeam.name }}</td>
                         <td class="align-text">
                             <a href="{{ path('player_update', {'id': player.id}) }}">
-                                <button type="button" class="btn btn-primary">Modifier</button>
+                                <button type="button" class="btn btn-primary">
+                                Modifier <ion-icon name="create-outline"></ion-icon>
+                            </button>
                             </a>
-                            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#ConfirmModalDeletePlayer_{{ player.id }}">Supprimer</button>
-                            <a href="{{ path('player_detail', {'id': player.id}) }}">
-                                <button ctype="button" class="btn btn-info">Voir détail</button>
+                            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#ConfirmModalDeletePlayer_{{ player.id }}">
+                                Supprimer <ion-icon name="trash"></ion-icon>
+                            </button>
+                                <a href="{{ path('player_detail', {'id': player.id}) }}">
+                                <button ctype="button" class="btn btn-info">
+                                    Voir détail <ion-icon name="eye-outline"></ion-icon>
+                                </button>
                             </a>
                         </td>
                         <div class="modal fade" id="ConfirmModalDeletePlayer_{{ player.id }}" tabindex="-1" role="dialog" aria-labelledby="ConfirmModalDeletePlayerLabel" aria-hidden="true">
