tri par nom et nombre de buts

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,9 @@
                 #navbarSupportedContent {
                     text-align: center;
                 }
+                #triName, #triNumberGoals {
+                    cursor: pointer;
+                }
             </style>
         {% endblock %}
 
